# animate-diagram

./: .gitignore  AGENTS.md  README.md  plan.md  pyproject.toml
.github/workflows/: publish.yml
src/animate_diagram/: cli.py
