[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animate-diagram"
version = "0.1.0"
description = "CLI tool to animate data-flow arrows in SVG diagrams and export a GIF."
requires-python = ">=3.9"
dependencies = ["cairosvg>=2.7", "Pillow>=10.0"]

[project.scripts]
animate-diagram = "animate_diagram.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
