[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "animate-diagram"
version = "0.1.0"
description = "CLI tool to animate data-flow arrows in SVG diagrams and export a GIF."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
dependencies = ["cairosvg>=2.7", "Pillow>=10.0", "playwright>=1.43"]
keywords = ["svg", "gif", "diagram", "animation", "excalidraw"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
]

[project.scripts]
animate-diagram = "animate_diagram.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
